2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* FileOpenDialog.xml:
	* FileImportDialog.xml: 

2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.h:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* GridEditor.h:
	* ScenePropertiesEditor.xml:
	* NodePropertiesEditor.cpp:
	* OutlineSeparator.h:
	* OutlineSeparator.cpp: 

2014-09-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Appearance.svg: 

2014-09-29  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp:
	* Configuration.h:
	* Configuration.cpp:
	* X3DGridEditor.h:
	* X3DAngleEditor.h: 

2014-09-29  Holger Seelig  <holger.seelig@yahoo.de>

	* UserData.h:
	* UserData.h:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp:
	* NodeIndex.h:
	* NodeIndex.cpp:
	* OutlineTreeData.h:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* X3DOutlineTreeView.h: 

2014-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* UserData.h:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp:
	* NodeIndex.h:
	* NodeIndex.cpp:
	* OutlineTreeData.h:
	* OutlineUserData.h:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* OutlineTreeData.cpp:
	* X3DOutlineTreeView.h:
	* OutlineSelection.cpp:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2014-09-28  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* Palette.x3dv:
	* AngleTool.h:
	* GridTool.cpp:
	* GridEditor.xml:
	* AngleTool.cpp:
	* X3DAngleEditor.h:
	* X3DGridEditor.cpp:
	* X3DAngleEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-27  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.h:
	* GridTool.cpp:
	* GridEditor.xml:
	* X3DGridEditor.h:
	* X3DGridEditor.cpp:
	* X3DFieldAdjustment2.h:
	* X3DFieldAdjustment4.h:
	* X3DFieldAdjustment3.h:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp:
	* X3DViewportEditor.cpp: 

2014-09-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Grid.svg:
	* AngleTool.h:
	* GridEditor.xml:
	* AngleTool.cpp: