@@ -1,3 +1,8 @@
+2014-10-02  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* GridTool.cpp:
+	* AngleTool.cpp: 
+
 2014-10-01  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* FileOpenDialog.xml:
